--- a/remote/src/main/webapp/app/information/information.component.html
+++ b/remote/src/main/webapp/app/information/information.component.html
@@ -1,25 +1,25 @@
 <div class="w3-container w3-border w3-large">
   <div class="w3-left-align">
     <section>
-      <br/>
-      The application uses a browser; is open source.
-
-      Please make a fork of the github repo and make your modification.
-
-      By providing a pull request your modification will be merged into the main stream; so
-      all users can enjoy the enhancement you make!
-
-      <br/>This app is based on different components:
-    </section>
+      <br/>This web app is based on:
+    </section>1
     <li>WDSP ; An excellent DSP library by Warren Pratt, NR0V</li>
     <li>Ported to Linux by John Melton, G0ORX</li>
-    <li>JNI java native interface to WDSP</li>
-    <li>JAVA</li>
-    <li>TOMEE Webserver using CDI</li>
-    <li>Angular (typescript and javascript)</li>
-    <li>Websockets and REST</li>
-    <li>W3.CSS Stylesheet</li>
+    <li>JNI (Java Native Interface) to WDSP</li>
+    <li>TOMEE Webserver</li>
+    <li>Angular</li>
+    <li>Websockets for mic and audio streams</li>
+    <li>REST interface to control the radio</li>
+    <li>W3.css Stylesheet</li>
     <li>Maven</li>
+    <br/>
+
+    The application is open source; your are working with an initial version.
+
+    If you like to contribute:
+    <li>Make a fork of the github repo. </li>
+    <li>Provide a pull request with your modification </li>
+
     <br/>
     Enjoy remote working. Johan, PA3GSB.
   </div>
