--- a/remote/src/main/webapp/app/app.component.html
+++ b/remote/src/main/webapp/app/app.component.html
@@ -24,7 +24,7 @@
     <router-outlet></router-outlet>
 
     <div class="w3-container w3-teal w3-center">
-      <p>&nbsp;</p>
+      <p class="w3-right">Version: {{version}}</p>
     </div>
 
   </div>
