--- a/remote/src/main/webapp/app/information/information.component.html
+++ b/remote/src/main/webapp/app/information/information.component.html
@@ -2,7 +2,7 @@
   <div class="w3-left-align">
     <section>
       <br/>This web app is based on:
-    </section>1
+    </section>
     <li>WDSP ; An excellent DSP library by Warren Pratt, NR0V</li>
     <li>Ported to Linux by John Melton, G0ORX</li>
     <li>JNI (Java Native Interface) to WDSP</li>
